[REF] lighting_reporting: correct the overlap of the description in the datasheet

--- a/lighting_reporting/static/src/less/styles.less
+++ b/lighting_reporting/static/src/less/styles.less
@@ -196,6 +196,7 @@ div.footer {
   font-weight: 400;
   font-size: 14px; // 8pt
   text-align: right;
+  word-break: break-all;
 }
 
 ////////// BODY MAIN PAGE ///////////////
